Added routes and services to all entities
